--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.7",
         "laravel/vonage-notification-channel": "^3.3",
+        "maatwebsite/excel": "^1.1",
         "twilio/sdk": "^8.2"
     },
     "require-dev": {
